--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -55,6 +55,8 @@ h1, h2, h3, h4, h5, h6 {
 
 
 /* Hero Section */
+
+
 .hero-section {
     background: linear-gradient(135deg, #e6e8ea 0%, #e4e4e7 100%);
     color: white;
@@ -77,8 +79,9 @@ h1, h2, h3, h4, h5, h6 {
 main {
     background-color: #f8f9fa;
     min-height: 62vh;
-    align-content: center
+    /* align-content: start; */
 }
+
 
 /* Blog Post Cards */
 .post-card {
