--- a/views/details.ejs
+++ b/views/details.ejs
@@ -35,8 +35,8 @@
 
     <!-- Edit Mode -->
     <div id="edit-mode" class="row justify-content-center" style="display: none;">
-        <div class="col-lg-12">
-            <div class="card shadow-sm">
+        <div class="col-lg-8 mx-auto">
+            <div class="card shadow-sm ">
                 <div class="card-body p-4">
                     <h2 class="card-title mb-4">
                         Update Post
