--- a/views/create_post.ejs
+++ b/views/create_post.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header.ejs") %>
 
-<div class="container my-5">
+<div class="container py-5">
     <div class="row justify-content-center">
         <div class="col-lg-8">
             <div class="create-post-card card shadow-sm">
