--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -52,8 +52,8 @@
                     </p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <a href="/privacy" class="text-muted text-decoration-none small me-3">Privacy Policy</a>
-                    <a href="/terms" class="text-muted text-decoration-none small">Terms of Service</a>
+                    <a href="#" class="text-muted text-decoration-none small me-3">Privacy Policy</a>
+                    <a href="#" class="text-muted text-decoration-none small">Terms of Service</a>
                 </div>
             </div>
         </div>
